--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <div>
-      <h1>Primeiro site</h1>
+      <h1 style="background-color: lightblue; font-family: Verdana, Geneva, Tahoma, sans-serif; text-align: center;">Primeiro site</h1>
     </div>
   </header>
 </body>
